Fixed bug where pre > code would not wrap for mobiles

--- a/Source/Styles/Styles.css
+++ b/Source/Styles/Styles.css
@@ -198,3 +198,8 @@ a
 
   background-color: #2772db;
 }
+
+pre
+{
+  white-space: pre-wrap;
+}
